# abb_wrapper

abb_driver/config/: gofa_cfg.yaml
abb_librapid_socket/: CMakeLists.txt  package.xml
abb_librapid_socket/include/abb_librapid_socket/: socket_client.h
abb_librapid_socket/src/: .socket_client.cpp.swp  socket_client.cpp
abb_librapid_socket/src/executables/: benchmark_rate.cpp  manual_trigger.cpp
abb_librws/: CMakeLists.txt
abb_librws/include/abb_librws/: rws_client.h  rws_common.h  rws_interface.h
abb_librws/src/: rws_client.cpp  rws_common.cpp  rws_interface.cpp
abb_librws/src/executables/: load_file.cpp  manage_files.cpp  start_rapid_program.cpp  stop_rapid_program.cpp
abb_librws/src/executables/rapid_programs/: arm_control_ctl_new_name.mod  speed_benchmark.mod  speed_benchmark.pgf  test.mod  test.pgf
